# dwcahandler

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: prepare-release.yml  publish-release.yml  publish-test.yml  run-tests.yml  update-terms.yml
src/dwcahandler/: __init__.py
src/dwcahandler/dwca/: __init__.py  base_dwca.py  core_dwca.py  dwca_factory.py  dwca_meta.py  eml.py  large_dwca.py  terms.py
src/dwcahandler/dwca/terms/: class-rowtype.csv  darwin-core-terms.csv  darwin_core-terms.csv  dublin-core-terms.csv  extension-register.csv  extension_register.csv  terms.csv
src/dwcahandler/scripts/: update_dwc_terms.py  update_terms.py
tests/: __init__.py  conftest.py  test_build_eml.py  test_create_core_and_ext_content.py  test_create_dwca.py  test_delete_dwca_content.py  test_extractdwca.py  test_listterms.py  test_merge_dwca.py  test_multimedia_content.py  test_validate_dwca.py  test_write_dwca.py  test_writedwca.py
tests/input_files/dwca/dwca-sample1/: meta.xml  occurrence.txt
tests/input_files/dwca/dwca-sample2/: occurrence.txt
tests/input_files/dwca/dwca-sample3/: meta.xml  occurrence.txt
tests/input_files/dwca/dwca-sample4/: meta.xml  occurrence.csv
tests/input_files/dwca/dwca-sample5/: meta.xml  occurrence.csv
tests/input_files/dwca/dwca-sample6/: occurrence.txt  verbatim.txt
tests/input_files/dwca/dwca-sample7/: meta.xml  occurrence.txt  verbatim.txt
tests/input_files/eml/: eml-sample.xml
tests/input_files/event/cameratrap-sample1/: event.txt  measurement_or_fact.txt  meta.xml  occurrence.txt
tests/input_files/event/cameratrap-sample2/: event.txt  extended_measurement_or_fact.txt  meta.xml  occurrence.txt
tests/input_files/multimedia/: multimedia_file.csv  multimedia_file.tsv
tests/input_files/occurrence/: occ_file1.csv  occ_file1.tsv  occ_file2_additional_column.csv  occ_file2_additional_column.tsv
tests/input_files/occurrence/sample1/: meta.xml  multimedia.txt  occurrence.txt
tests/input_files/occurrence/sample2/: meta.xml  multimedia.txt  occurrence.txt
tests/input_files/occurrence/sample3/: multimedia.txt  occurrence.txt
tests/input_files/occurrence/sample4/: meta.xml
tests/input_files/occurrence/sample5/: meta.xml  occurrence.txt
tests/input_files/occurrence/sample6/: occurrence.txt
tests/input_files/sample/: multimedia.csv  multimedia_header_with_space.csv  occ_header_with_space.csv
