[tool.poetry]
name = "dwcahandler"
version = "0.0.1"
description = "Python package to handle Darwin Core Archive (DwCA) operations. This includes creating a DwCA zip file from one or more csvs, reading a DwCA, merge two DwCAs, validate DwCA and delete records from DwCA based on one or more key columns"
authors = ["Atlas of Living Australia data team <support@ala.org.au>"]
maintainers = ["Atlas of Living Australia data team <support@ala.org.au>"]
repository = "https://github.com/AtlasOfLivingAustralia/dwcahandler"
license = "MPL-1.1"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

